# cpp-roguelike

./: .gitignore  CMakeLists.txt  Config.h.in  GameManager.cpp  Makefile  TODO  main.cpp  orig_main.cpp  working_main.cpp
EventSystem/: CMakeLists.txt  Event.hpp  EventBus.cpp  EventBus.hpp
Graphics/: CMakeLists.txt  GameWindow.cpp  GameWindow.hpp  GraphicsData.cpp  GraphicsData.hpp
ObserverSystem/: CMakeLists.txt  Observer.hpp  ObserverSubject.cpp  ObserverSubject.hpp
SDL2/: CMakeLists.txt
Testing/: CMakeLists.txt  LilTester.cpp  LilTester.hpp  ObserverTester.cpp  ObserverTester.hpp
core/: CMakeLists.txt  GameManager.cpp  GameManager.hpp
data/: PathData.cpp
graveyard/: EventBus.cpp  EventName.hpp  vcpkg.json
graveyard/data/: PathData.hpp
imgui/: CMakeLists.txt
include/: GameManager.hpp  GraphicsData.hpp
include/core/: EventManager.hpp  EventName.hpp
src/: GameManager.cpp  main.cpp
src/core/: EventManager.cpp
